--- a/README.org
+++ b/README.org
@@ -9,6 +9,9 @@ This is a dummy Clojure project showcasing how to configure Log4J2 as the loggin
 5. Copy the ~resources/log4j2.xml~ and ~resources/log4j2-test.xml~ files into your resources folder. Make sure that JVM opts explicitly pass the ~log4j2.configurationFile~ option to ensure that the correct file is picked this. Make sure that the ~:test~ profile uses the test configuration file.
 6. Review the configuration files and set sensible names in the configuration (override the defaults).
 
+* Gotchas
+1. You need to create (=touch=) the logging file that you specify in the ~log4j2~ configuration.
+
 * References used to build this project:
 - https://github.com/stuartsierra/log.dev
 - https://www.loggly.com/blog/benchmarking-java-logging-frameworks/
